--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
   <h1 onclick="displayMessage();">Click Me</h1>
   <div id="message-box"></div>
+
+  <h1>This is a new section</h1>
+
   <script src="./myscript.js"></script>
 </body>
 </html>
