--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1 onclick="displayMessage();">Click Me</h1>
   <div id="message-box"></div>
+  <div id="message-box-2"></div>
 
   <h1>This is a new section</h1>
 
