--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div id="message-box"></div>
 
   <h1>This is a new section</h1>
+  <p>This is a change</p>
 
   <script src="./myscript.js"></script>
 </body>
