--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <h1 onclick="displayMessage();">Click Me</h1>
-  <div id="message-box"></div>
+  <div class="message-box" id="message-box"></div>
+  <div class="message-box" id="message-box-2"></div>
 
   <h1>This is a new section</h1>
 
