--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1 onclick="displayMessage();">Click Me</h1>
+  <h1 onclick="betterMEssage();">Also click me</h1>
   <div class="message-box" id="message-box"></div>
   <div class="message-box" id="message-box-2"></div>
 
